- [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
- [LOG_FORWARDER] New send_as_raw feature for LogForwarders in gui
- [API_PARSER] New collector **Retarus**
- [BACKEND] [GUI] HTTP/2 Health check
- [BACKEND] [GUI] TCP Health check
- [CLUSTER] Node state and heartbeat
- [GUI] API collector node runner selector
### Changed
- [LOG_FORWARDER] [HIREDIS] Use updated templates <name>_json
### Fixed
- [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
- [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
- [FRONTEND] Disable logforwarder if logging disabled
- [FRONTEND] Reload services only on involved nodes
- [FRONTEND] Remove old conf when changing frontend mode to avoid duplicate ruleset


## [2.9.1] - 2023-08-16
### Fixed
- [API_PARSER] [SENTINEL_ONE_MOBILE] Fix query params and API uri
- [FRONTEND] timeouts on save and wrong endpoints


## [2.9.0] - 2023-07-20
### Removed
- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
### Added
- [API_PARSER] New API parser SentinelOne Mobile
- [API_PARSER] New API parser CSC DomainManager
- [LOG_FORWARDER] Disk-assisted queues for reliability
- [PORTAL] [IDP] Refresh token support through OAuth2 flow
### Changed
- [VOCABULARY] Replace 'slave' word uses with 'replica'
- [NETWORK] Improve the way Node IPs are updated on disk
- [NETIF] [API] Only return from API call when refresh has been finished
- [DEPENDENCIES] Python dependencies upgrade
    - django 3.2.19 -> 3.2.20
    - cryptography 41.0.1 -> 41.0.2
### Fixed
- [PORTAL] [OPENID] Improve error returns and code quality
- [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
- [SYSTEM] [CERTIFICATES] Reload HAProxy on certificate change
- [ACLS] Rebuild HAProxy conf on ACL change
- [LOGFORWARDER] [ELASTICSEARCH] Enable ELS>=8 compatibility
- [LOGFORWARDER] [ELASTICSEARCH] Ensure index patterns are kept to lowercase